--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -11,7 +11,7 @@
 
 .navigation-teaser{
     font-family: 'Helvetica';
-    font-size:1.3rem;
+    font-size:1.5rem;
 }
 
 .navigation-image-container{
@@ -26,4 +26,10 @@
 img{
     object-fit:cover;
     width:100%;
+}
+
+@media (max-width:500px){
+    .navigation-image-container{
+        display:none;
+    }
 }
