--- a/src/app/filter-controls/filter-controls.component.css
+++ b/src/app/filter-controls/filter-controls.component.css
@@ -11,3 +11,18 @@
     width:100%;
     padding:1rem 0;
 }
+
+@media (max-width:480px){
+
+    .container{
+        padding:1.5rem;
+    }
+
+    .teaser{
+        display:none;
+    }
+
+    .custom-btn{
+        padding:1rem;
+    }
+}
