update task-list header

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navigation">
+<nav class="navigation bg-dark">
     <div class="navigation-image-container">
         <img src="../../assets/images/favicon.ico" alt="Unser cooles Angular Logo">
     </div>
