--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navigation></app-navigation>
 <app-filter-controls></app-filter-controls>
 <app-new-task></app-new-task>
+<app-task-list></app-task-list>
