--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -4,10 +4,12 @@
         <h3 class="teaser">Task List</h3>
     </div>
     <div class="list-container">
-        <ul>
-            <li>Test</li>
-            <li>Test</li>
-            <li>Test</li>
+        <ul class="list-group">
+            @if(tasks){
+                @for(task of tasks; track task.id){
+                    <app-task-list-item [task]="task"></app-task-list-item>
+                }
+            }
         </ul>
     </div>
 </section>
