add task and delete

--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -1,8 +1,8 @@
 <section class="container">
     <h3 class="teaser">Add new Task</h3>
     <div class="input-container">
-        <input type="text" placeholder="Enter your new task here">
-        <button class="custom-btn">Add</button>
+        <input #inputTaskfFeld type="text" placeholder="Enter your new task here">
+        <button (click)="addTask()" class="custom-btn">Add</button>
     </div>
 </section>
 
